--- a/SnakeGame.csproj
+++ b/SnakeGame.csproj
@@ -82,4 +82,16 @@
 	  </MauiXaml>
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0-android'">
+	  <PackageReference Include="GlobalKeyboardCapture.Maui">
+	    <Version>1.0.2</Version>
+	  </PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0-windows10.0.19041.0'">
+	  <PackageReference Include="GlobalKeyboardCapture.Maui">
+	    <Version>1.0.2</Version>
+	  </PackageReference>
+	</ItemGroup>
+
 </Project>
