--- a/SnakeGame.csproj
+++ b/SnakeGame.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>net10.0-android;net10.0-ios;net10.0-maccatalyst</TargetFrameworks>
@@ -54,6 +54,24 @@
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+		<MauiAsset Include="Resources\Sounds\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
+	
+
+	<ItemGroup>
+	  <None Remove="Resources\Sounds\Game_Over.wav" />
+	  <None Remove="Resources\Sounds\Home_Screen_playingcontinuously.wav" />
+	  <None Remove="Resources\Sounds\NormalFood_Eaten.wav" />
+	  <None Remove="Resources\Sounds\SnakeCollideWithWallorSelf.wav" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiAsset Include="Resources\Sounds\Game_Over.wav" />
+	  <MauiAsset Include="Resources\Sounds\Home_Screen_playingcontinuously.wav">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </MauiAsset>
+	  <MauiAsset Include="Resources\Sounds\NormalFood_Eaten.wav" />
+	  <MauiAsset Include="Resources\Sounds\SnakeCollideWithWallorSelf.wav" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -63,11 +81,8 @@
 		<PackageReference Include="Microsoft.Maui.Essentials" Version="10.0.11" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" />
 		<PackageReference Include="Mopups" Version="1.3.4" />
+		<PackageReference Include="Plugin.Maui.Audio" Version="4.0.0" />
 		<PackageReference Include="Plugin.Toolkit.Fonts.MaterialIcons" Version="1.0.4" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Resources\Sounds\" />
 	</ItemGroup>
 
 	<ItemGroup>
